<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue" />
    <RelativeLayout
        android:id="@+id/settings_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/title_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="24dp"
            android:text="@string/bahasa"
            android:textColor="@color/blue"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="216dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/language_settings"
            android:src="@drawable/baseline_language_24" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@color/blue" />

    <RelativeLayout
        android:id="@+id/log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/title_log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="24dp"
            android:text="@string/log_out"
            android:textColor="@color/blue"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="216dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/language_settings"
            android:src="@drawable/baseline_exit_to_app_24" />

    </RelativeLayout>


</LinearLayout>